# logics_tool

./: .gitignore  CMakeLists.txt  LICENSE
grammar/Parser/: LogicsContractsLexer.cpp  LogicsContractsLexer.h  LogicsContractsLexer.tokens  LogicsContractsParser.cpp  LogicsContractsParser.h
include/: Console.hh  LogicsSpecsBuilder.hh  chase-logicsLang.hh  chase_logicsLang.hh  main.hh
src/: Console.cc  Console_commands.cc  bindings.cc  main.cc
